bundle_error.log

                        ▒▒▓▓▓▓▒▒
                     ▒▓▓▓▒▒░░▒▒▓▓▓▒
                  ▒▓▓▓▓░░░▒▒▒▒░░░▓▓▓▓▒
                 ▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓
                 ▓▓░░░░░▒▓▓▓▓▓▓▒░░░░░▓▓
                 ▓▓░░▓▓▒░░░▒▒░░░▒▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▒▒▒▒▓▓▓▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▓▓▓▓▓▓▓▓▒░░▓▓
                 ▓▓▒░░▒▒▓▓▓▓▓▓▓▓▒░░░▒▓▓
                  ▒▓▓▓▒░░░▒▓▓▒░░░▒▓▓▓▒
                     ▒▓▓▓▒░░░░▒▓▓▓▒
                        ▒▒▓▓▓▓▒▒


                Welcome to Metro v0.83.3
              Fast - Scalable - Integrated


error SyntaxError: /Users/Prince/VLocker Full Access/vlocker/src/screens/DeviceLockScreen.js: Unexpected token (40:8)

[0m [90m 38 |[39m       [36mtry[39m {
 [90m 39 |[39m         setLoading([36mtrue[39m)[33m;[39m
[31m[1m>[22m[39m[90m 40 |[39m         )[33m.[39munwrap()[33m;[39m
 [90m    |[39m         [31m[1m^[22m[39m
 [90m 41 |[39m
 [90m 42 |[39m         [36mif[39m (result[33m?[39m[33m.[39mdata [33m&&[39m result[33m.[39mdata[33m.[39mlength [33m>[39m [35m0[39m) {
 [90m 43 |[39m           [36mconst[39m loan [33m=[39m result[33m.[39mdata[[35m0[39m][33m;[39m[0m.
SyntaxError: /Users/Prince/VLocker Full Access/vlocker/src/screens/DeviceLockScreen.js: Unexpected token (40:8)

[0m [90m 38 |[39m       [36mtry[39m {
 [90m 39 |[39m         setLoading([36mtrue[39m)[33m;[39m
[31m[1m>[22m[39m[90m 40 |[39m         )[33m.[39munwrap()[33m;[39m
 [90m    |[39m         [31m[1m^[22m[39m
 [90m 41 |[39m
 [90m 42 |[39m         [36mif[39m (result[33m?[39m[33m.[39mdata [33m&&[39m result[33m.[39mdata[33m.[39mlength [33m>[39m [35m0[39m) {
 [90m 43 |[39m           [36mconst[39m loan [33m=[39m result[33m.[39mdata[[35m0[39m][33m;[39m[0m
    at constructor (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:367:19)
    at FlowParserMixin.raise (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:6624:19)
    at FlowParserMixin.unexpected (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:6644:16)
    at FlowParserMixin.parseExprAtom (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11508:22)
    at FlowParserMixin.parseExprAtom (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:4793:20)
    at FlowParserMixin.parseExprSubscripts (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11145:23)
    at FlowParserMixin.parseUpdate (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11130:21)
    at FlowParserMixin.parseMaybeUnary (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11110:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10963:61)
    at FlowParserMixin.parseExprOps (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10968:23)
    at FlowParserMixin.parseMaybeConditional (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10945:23)
    at FlowParserMixin.parseMaybeAssign (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10895:21)
    at FlowParserMixin.parseMaybeAssign (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:3578:18)
    at FlowParserMixin.parseExpressionBase (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10848:23)
    at /Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10844:39
    at FlowParserMixin.allowInAnd (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12495:16)
    at FlowParserMixin.parseExpression (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10844:17)
    at FlowParserMixin.parseStatementContent (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12971:23)
    at FlowParserMixin.parseStatementLike (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12843:17)
    at FlowParserMixin.parseStatementLike (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:2945:24)
    at FlowParserMixin.parseStatementListItem (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12823:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:13392:61)
    at FlowParserMixin.parseBlockBody (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:13385:10)
    at FlowParserMixin.parseBlock (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:13373:10)
    at FlowParserMixin.parseTryStatement (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:13281:23)
    at FlowParserMixin.parseStatementContent (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12880:21)
    at FlowParserMixin.parseStatementLike (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12843:17)
    at FlowParserMixin.parseStatementLike (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:2945:24)
    at FlowParserMixin.parseStatementListItem (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12823:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:13392:61)
    at FlowParserMixin.parseBlockBody (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:13385:10)
    at FlowParserMixin.parseBlock (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:13373:10)
    at FlowParserMixin.parseFunctionBody (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12174:24)
    at /Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:2919:63
    at FlowParserMixin.forwardNoArrowParamsConversionAt (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:3095:16)
    at FlowParserMixin.parseFunctionBody (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:2919:12)
    at FlowParserMixin.parseArrowExpression (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:12149:10)
    at FlowParserMixin.parseAsyncArrowFromCallExpression (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11328:10)
    at FlowParserMixin.parseAsyncArrowFromCallExpression (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:3516:18)
    at FlowParserMixin.parseCoverCallAndAsyncArrowHead (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11258:27)
    at FlowParserMixin.parseSubscript (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11184:19)
    at FlowParserMixin.parseSubscript (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:3679:18)
    at FlowParserMixin.parseSubscripts (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11158:19)
    at FlowParserMixin.parseSubscripts (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:3645:18)
    at FlowParserMixin.parseExprSubscripts (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11149:17)
    at FlowParserMixin.parseUpdate (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11130:21)
    at FlowParserMixin.parseMaybeUnary (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:11110:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10963:61)
    at FlowParserMixin.parseExprOps (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10968:23)
    at FlowParserMixin.parseMaybeConditional (/Users/Prince/VLocker Full Access/vlocker/node_modules/@babel/parser/lib/index.js:10945:23)
